# matrix

./: CMakeLists.txt  Makefile  Matrix.h  README.md  main.cpp  matrix.out
doc/html/: _matrix_8cpp.html  _matrix_8cpp.js  _matrix_8h.html  _matrix_8h.js  _matrix_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  class_matrix-members.html  class_matrix.html  class_matrix.js  classes.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8cpp.html  main_8cpp.js  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html  pch_8cpp.html  pch_8h.html  pch_8h_source.html  test_8cpp.html  test_8cpp.js
doc/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js
tests/: test.cpp
